having issues with height and overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -139,13 +139,13 @@ header {
 
 
 .practice {
-    height: 90vh;
+    // height: 90vh;
     @include flex;
     flex-wrap: wrap;
 
     .title-header {
         width: 40%;
-        height: 100%;
+        height: 100vh;
         @include flex;
         align-items: flex-start;
         background-color: var(--bg-light);    
@@ -162,7 +162,7 @@ header {
         }
     }
     .practice-info {
-        height: 100%;
+        height: 100vh;
         width: 55%;
         margin-right: auto;
         @include flex(center, center);
@@ -340,32 +340,33 @@ header {
 
 .contact-info {
     height: 100vh;
-    background-color: rgba(0, 87, 146, .5);
+    background-color: rgba(0, 87, 146, .55);
     position: relative;
     display: grid;
     grid-template:
-    "title info" 100%/
+    "title info" 100vh/
     40% 60%;
 
-    & * {
-        border: 2px solid yellowgreen;
-    }
-
     &::after {
+        content: "";
         background-image: url("../images/city-scape.jpg");
         @include bg-img;
         position: absolute;
         inset: 0;
+        z-index: -1;
+        background-attachment: fixed;
     }
     .title-header {
         grid-area: title;
-        place-self: center;
         height: 100%;
         width: 100%;
-        background-color: var(--bg-dark);
+        background-color: darken( rgba(0, 87, 146, .8), 10%);
         
         h1 {
             color: var(--bck-grnd);
+            width: max-content;
+            margin: 20% auto;
+            padding-left: 4rem;
 
             font: {
                 size: var(--h1-fnt-sz);
@@ -375,7 +376,49 @@ header {
     }
     .contact {
         grid-area: info;
-        
+        padding: 2rem 3rem;
+
+        .title-wrap {
+           p {
+            font-size: 700;
+           }
+        }
+
+        .title-wrap,
+        .address {
+            margin-bottom: 2rem;
+            color: var(--bck-grnd);
+        }
+        .address {
+            a {
+                color: var(--bck-grnd);
+                display: inline-block;
+                margin-top: 1.5rem;
+        }
+    }
+        p {
+            color: var(--bck-grnd);
+        }
+        form {
+            display: grid;
+            grid-auto-rows: 1fr;
+            gap: .8rem;
+            margin-top: 1.5rem;
+            color: var(--bck-grnd);
+
+            label {
+                width: 50%;
+                font-weight: 700;
+            }
+            input {
+                width: 50%;
+                height: 1.8rem;
+
+                &[type="submit"] {
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
 
